--- a/app/src/main/res/drawable/undraw_profile_details.xml
+++ b/app/src/main/res/drawable/undraw_profile_details.xml
@@ -40,13 +40,13 @@
         android:fillColor="#2f2e41"
         android:pathData="M353.13,264.81S340.54,282.63 341.06,288.62s4.96,1.21 0.51,5.98 -7.03,1.57 -4.85,7.46 3.07,2.08 2.18,5.89 0.89,149.81 0.89,149.81h23.14s13.05,-84.65 11.4,-88.6 -1.61,-2.23 0.14,-6.43 3.41,-9.2 3.41,-9.2l18.29,-51.47 14.11,72.47L426.88,460.64h22.17s3.8,-126.63 5.48,-128.21 -0.33,-5.12 -2.44,-7.17 -1.69,-4.12 -1.01,-8.33 3.54,-6.56 3.44,-9.2 6.12,-44.63 -3.65,-51.31S353.13,264.81 353.13,264.81Z" />
     <path
-        android:fillColor="#1972f0"
+        android:fillColor="@color/food"
         android:pathData="M430.49,87.3l-25.88,-6.71L392.53,63.93l-28.69,3.53 -6.11,22.73L337.3,102.04c36.61,0.22 16.9,106.29 22.28,113.14 4.38,5.57 -21.86,18.82 -13.64,27.27s5.18,5.07 3.27,14.27 -15.82,18.94 0,18.84 111.26,-1.46 108.54,-12.37 -2.68,-8.14 -6.8,-14.98 -6.88,-3.02 -5.5,-13.11 -3.11,-17.9 0.02,-22.36c4.81,-6.85 -0.04,-56.34 -4.57,-55.02Z" />
     <path
-        android:fillColor="#1972f0"
+        android:fillColor="@color/food"
         android:pathData="M423.1,87.65s18.93,-8.04 25.75,6.96c2.18,4.79 4.01,16.82 5.78,14.15s0.06,3.18 1.16,3.19c0.98,0.01 2.48,-1.57 1.34,3.87a10.77,10.77 0,0 0,3.15 9.92l-32.9,19.71Z" />
     <path
-        android:fillColor="#1972f0"
+        android:fillColor="@color/food"
         android:pathData="M351.97,101.29s-18.93,-8.04 -25.75,6.96c-1.92,4.22 -1.44,13.59 -5.17,12.54s-1.08,2.91 -1.58,4.29c-0.55,1.54 1.85,5.88 -1.52,4.36s-3.16,9.94 -3.16,9.94L347.7,159.08Z" />
     <path
         android:fillColor="#2f2e41"
@@ -64,10 +64,10 @@
         android:fillColor="#fff"
         android:pathData="M270.87,15h-252.73a18.16,18.16 0,0 0,-18.14 18.13L-0,260.86a18.16,18.16 0,0 0,18.14 18.14h252.73a18.16,18.16 0,0 0,18.13 -18.14L289,33.13A18.15,18.15 0,0 0,270.87 15Z" />
     <path
-        android:fillColor="#1972f0"
+        android:fillColor="@color/food"
         android:pathData="M155.39,67.27h-27a5,5 0,1 1,0 -10h27a5,5 0,0 1,0 10Z" />
     <path
-        android:fillColor="#1972f0"
+        android:fillColor="@color/food"
         android:pathData="M513.39,297h-27a5,5 0,0 1,0 -10h27a5,5 0,0 1,0 10Z" />
     <path
         android:fillColor="#e6e6e6"
