--- a/app/src/main/res/drawable/baseline_add_a_photo_24.xml
+++ b/app/src/main/res/drawable/baseline_add_a_photo_24.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:tint="#1972F0"
+    android:tint="@color/food"
     android:viewportWidth="24"
     android:viewportHeight="24">
 
