--- a/app/src/main/res/drawable/message_square_lines_svgrepo_com.xml
+++ b/app/src/main/res/drawable/message_square_lines_svgrepo_com.xml
@@ -7,7 +7,7 @@
         android:fillColor="#00000000"
         android:pathData="M8,8H16M8,12H13M7,16V21L12,16H20V4H4V16H7Z"
         android:strokeWidth="1.5"
-        android:strokeColor="#1972f0"
+        android:strokeColor="@color/food"
         android:strokeLineCap="round"
         android:strokeLineJoin="round" />
 </vector>
