--- a/app/src/main/res/drawable/transfer.xml
+++ b/app/src/main/res/drawable/transfer.xml
@@ -44,7 +44,7 @@
       android:fillColor="#e6e6e6"/>
   <path
       android:pathData="M129.79,395.52m-58,0a58,58 0,1 1,116 0a58,58 0,1 1,-116 0"
-      android:fillColor="#1972f0"/>
+      android:fillColor="@color/food"/>
   <path
       android:pathData="M139.01,376.58c-4.89,0.2 -10.43,0.54 -14.05,4.29 -3.14,3.26 -3.83,8.11 -0.64,11.59 3.2,3.49 8.16,3.97 11.85,6.69 4.33,3.2 3.69,9.53 -0.49,12.56 -4.94,3.58 -11.31,1.91 -15.82,-1.49 -1.16,-0.87 -2.28,1.08 -1.14,1.94 4.04,3.05 9.32,4.75 14.32,3.29 4.51,-1.32 8.01,-4.99 8.36,-9.78 0.17,-2.28 -0.48,-4.6 -1.9,-6.4 -1.5,-1.9 -3.66,-3.07 -5.84,-4.03 -3.76,-1.64 -10.23,-3.76 -9.13,-9.1 1.32,-6.47 9.2,-7.09 14.49,-7.3 1.44,-0.06 1.45,-2.31 0,-2.25h0Z"
       android:fillColor="#fff"/>
@@ -56,7 +56,7 @@
       android:fillColor="#fff"/>
   <path
       android:pathData="M292.79,84.52m-32,0a32,32 0,1 1,64 0a32,32 0,1 1,-64 0"
-      android:fillColor="#1972f0"/>
+      android:fillColor="@color/food"/>
   <path
       android:pathData="M298.86,70.24c-3.96,0.16 -8.42,0.41 -11.42,3.36 -2.48,2.44 -3.35,6.24 -1.07,9.12 2.4,3.03 6.39,3.6 9.53,5.54 1.95,1.2 3.24,3.02 3.28,5.36 0.04,2.19 -0.97,4.24 -2.66,5.61 -4.15,3.37 -9.8,1.97 -13.73,-0.97 -0.77,-0.58 -1.52,0.72 -0.76,1.3 3.25,2.44 7.43,3.86 11.48,2.81 3.72,-0.97 6.72,-3.9 7.12,-7.81 0.43,-4.12 -2.28,-6.93 -5.79,-8.54 -3.21,-1.47 -8.84,-3.04 -8.31,-7.62 0.67,-5.82 7.8,-6.47 12.32,-6.66 0.96,-0.04 0.97,-1.54 0,-1.5h0Z"
       android:fillColor="#fff"/>
@@ -77,7 +77,7 @@
       android:fillColor="#e6e6e6"/>
   <path
       android:pathData="M401.42,134.52H186.8c-8.93,0 -16.19,7.26 -16.19,16.19v14.62c0,8.93 7.26,16.19 16.19,16.19h214.62c8.93,0 16.19,-7.26 16.19,-16.19v-14.62c0,-8.93 -7.26,-16.19 -16.19,-16.19Z"
-      android:fillColor="#1972f0"/>
+      android:fillColor="@color/food"/>
   <path
       android:pathData="M73.18,211.49l-8.23,-3.9c3.38,4.71 6.28,12.07 7.84,17.92 2.64,-5.45 6.89,-12.13 11.09,-16.11l-8.7,2.24c5.36,-26.27 25.52,-45.13 48.6,-45.13v-2c-24.11,0 -45.14,19.65 -50.61,46.98Z"
       android:fillColor="#3f3d56"/>
