--- a/app/src/main/res/drawable/verify.xml
+++ b/app/src/main/res/drawable/verify.xml
@@ -38,11 +38,11 @@
         android:pathData="M369.97,488L369.97,611.01c0,24.95 -19.42,45.17 -43.38,45.17L112.97,656.18c-23.95,0 -43.38,-20.23 -43.38,-45.17L69.6,499.99c37.04,-45.28 90.59,-72.35 147.66,-74.62S329.72,445.8 369.97,488Z" />
     <path
         android:fillAlpha="0.2"
-        android:fillColor="#1972f0"
+        android:fillColor="@color/food"
         android:pathData="M220.02,546.13m-63.21,0a63.21,63.21 0,1 1,126.42 0a63.21,63.21 0,1 1,-126.42 0"
         android:strokeAlpha="0.2" />
     <path
-        android:fillColor="#1972f0"
+        android:fillColor="@color/food"
         android:pathData="M220.02,546.13m-50.9,0a50.9,50.9 0,1 1,101.79 0a50.9,50.9 0,1 1,-101.79 0" />
     <path
         android:fillColor="#fff"
@@ -69,7 +69,7 @@
         android:fillColor="#ffb8b8"
         android:pathData="M486.34,443.9m-24.56,0a24.56,24.56 0,1 1,49.12 0a24.56,24.56 0,1 1,-49.12 0" />
     <path
-        android:fillColor="#1972f0"
+        android:fillColor="@color/food"
         android:pathData="M508.39,588.27c-17.23,0 -37.98,-3.63 -50.78,-18.48l-0.29,-0.33 0.3,-0.33c0.1,-0.11 9.51,-10.87 0.11,-30.06L444.8,543.05l-12.87,-16.99 7.13,-21.39 29.18,-23.5A26.75,26.75 0,0 1,482.85 475.38a80.21,80.21 0,0 0,27.78 -7.91,27.91 27.91,0 0,1 12.8,-2.8l0.57,0.02a9.95,9.95 0,0 1,9.64 10.71c-1.98,25.63 -5.47,87.54 4.79,108.86l0.26,0.55 -0.59,0.15a136.11,136.11 0,0 1,-29.72 3.32Z" />
     <path
         android:fillColor="#2f2e41"
@@ -87,6 +87,6 @@
         android:fillColor="#ffb8b8"
         android:pathData="M498.74,588.36a11.57,11.57 0,0 1,-1.27 -0.07,11 11,0 0,1 1.25,-21.93 10.63,10.63 0,0 1,1.47 0.11l33.58,-35.74 -3.51,-11.69 17.6,-7.89 4.93,12.06A20.49,20.49 0,0 1,546.62 546.88l-36.96,29.4a10.24,10.24 0,0 1,0.06 1.08,11.02 11.02,0 0,1 -3.66,8.2A10.87,10.87 0,0 1,498.74 588.36Z" />
     <path
-        android:fillColor="#1972f0"
+        android:fillColor="@color/food"
         android:pathData="M524.99,469.47h0a9.45,9.45 0,0 1,12.63 5.16l17.37,43.84 -27,18Z" />
 </vector>
