--- a/app/src/main/res/drawable/volunteer.xml
+++ b/app/src/main/res/drawable/volunteer.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="36">
   <path
       android:pathData="M36,32a4,4 0,0 1,-4 4H4a4,4 0,0 1,-4 -4V4a4,4 0,0 1,4 -4h28a4,4 0,0 1,4 4v28z"
-      android:fillColor="#1972f0"/>
+      android:fillColor="@color/food"/>
   <path
       android:pathData="M8.917,10.117A2.903,2.903 0,0 1,8.7 8.97c0,-1.302 1.147,-2.232 2.387,-2.232c1.055,0 1.706,0.682 2.108,1.519l4.806,12.898l4.807,-12.898c0.402,-0.837 1.053,-1.519 2.107,-1.519c1.24,0 2.387,0.93 2.387,2.232c0,0.434 -0.06,0.744 -0.217,1.147l-6.789,17.271c-0.404,0.992 -0.931,1.798 -2.295,1.798c-1.364,0 -1.891,-0.806 -2.295,-1.798L8.917,10.117z"
       android:fillColor="#eff3ff"/>
