--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -17,7 +17,7 @@
         android:layout_height="80dp"
         android:layout_margin="25dp"
         android:text="Next"
-        android:textColor="@color/white"
+        android:textColor="#ffffff"
         app:cornerRadius="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -47,7 +47,7 @@
                 android:layout_height="match_parent"
                 android:layout_margin="10dp"
 
-                android:background="@color/black"
+                android:background="#000000"
                 android:padding="2dp"
 
                 >
@@ -59,7 +59,7 @@
                     android:layout_height="60dp"
                     android:layout_margin="2dp"
 
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
                     android:gravity="center"
                     android:text="MENU"
                     android:textSize="25sp"
@@ -75,7 +75,7 @@
                     android:layout_width="160dp"
                     android:layout_height="60dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
 
                     android:gravity="center"
                     android:text="Monday"
@@ -91,7 +91,7 @@
                     android:layout_width="160dp"
                     android:layout_height="60dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
 
                     android:gravity="center"
                     android:text="Tuesday"
@@ -107,7 +107,7 @@
                     android:layout_width="160dp"
                     android:layout_height="60dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
 
                     android:gravity="center"
                     android:text="Wednesday"
@@ -123,7 +123,7 @@
                     android:layout_width="160dp"
                     android:layout_height="60dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
 
                     android:gravity="center"
                     android:text="Thursday"
@@ -139,7 +139,7 @@
                     android:layout_width="160dp"
                     android:layout_height="60dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
                     android:gravity="center"
 
                     android:text="Friday"
@@ -155,7 +155,7 @@
                     android:layout_width="160dp"
                     android:layout_height="60dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
                     android:gravity="center"
                     android:text="Saturday"
                     android:textSize="20sp"
@@ -171,7 +171,7 @@
 
                     android:layout_height="60dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
                     android:gravity="center"
                     android:text="Sunday"
                     android:textSize="20sp"
@@ -187,7 +187,7 @@
                     android:layout_width="120dp"
                     android:layout_height="200dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
                     android:gravity="center"
                     android:text="Breakfast"
                     android:textSize="20sp"
@@ -200,7 +200,7 @@
                     android:layout_width="160dp"
                     android:layout_height="200dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/breakfast"
@@ -213,7 +213,7 @@
                     android:layout_width="160dp"
                     android:layout_height="200dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/mobe"
@@ -226,7 +226,7 @@
                     android:layout_width="160dp"
                     android:layout_height="200dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/tube"
@@ -239,7 +239,7 @@
                     android:layout_width="160dp"
                     android:layout_height="200dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/webe"
@@ -252,7 +252,7 @@
                     android:layout_width="160dp"
                     android:layout_height="200dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/thbe"
@@ -265,7 +265,7 @@
                     android:layout_width="160dp"
                     android:layout_height="200dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/frbe"
@@ -278,7 +278,7 @@
                     android:layout_width="160dp"
                     android:layout_height="200dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
 
@@ -292,7 +292,7 @@
                     android:layout_width="120dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
                     android:gravity="center"
                     android:text="Lunch"
                     android:textSize="20sp"
@@ -305,9 +305,8 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
-
                     app:layout_constraintStart_toEndOf="@id/breakfast"
                     app:layout_constraintTop_toBottomOf="@id/mobe"
 
@@ -318,7 +317,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/molu"
@@ -331,7 +330,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/tulu"
@@ -344,7 +343,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/welu"
@@ -357,7 +356,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/thlu"
@@ -370,7 +369,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/frlu"
@@ -383,7 +382,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
 
@@ -398,7 +397,7 @@
                     android:layout_width="120dp"
                     android:layout_height="110dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
                     android:gravity="center"
                     android:text="Snacks"
                     android:textSize="20sp"
@@ -411,7 +410,7 @@
                     android:layout_width="160dp"
                     android:layout_height="110dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/breakfast"
@@ -424,7 +423,7 @@
                     android:layout_width="160dp"
                     android:layout_height="110dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/mosn"
@@ -437,7 +436,7 @@
                     android:layout_width="160dp"
                     android:layout_height="110dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/tusn"
@@ -450,7 +449,7 @@
                     android:layout_width="160dp"
                     android:layout_height="110dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/wesn"
@@ -463,7 +462,7 @@
                     android:layout_width="160dp"
                     android:layout_height="110dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/thsn"
@@ -476,7 +475,7 @@
                     android:layout_width="160dp"
                     android:layout_height="110dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/frsn"
@@ -489,7 +488,7 @@
                     android:layout_width="160dp"
                     android:layout_height="110dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
 
@@ -504,7 +503,7 @@
                     android:layout_width="120dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
                     android:gravity="center"
                     android:text="Dinner"
                     android:textSize="20sp"
@@ -517,7 +516,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/breakfast"
@@ -530,7 +529,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/modi"
@@ -543,7 +542,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/tudi"
@@ -556,7 +555,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/wedi"
@@ -569,7 +568,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/thdi"
@@ -582,7 +581,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/frdi"
@@ -595,7 +594,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
 
@@ -609,7 +608,7 @@
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/dinner" />
@@ -620,10 +619,10 @@
                     android:layout_height="100dp"
                     android:layout_margin="2dp"
                     android:layout_marginStart="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
                     android:text="**Salad to be present 7 days during lunch and dinner, Achaar/Lemon can be taken whenever needed by asking the mess workers."
-                    android:textColor="@color/black"
+                    android:textColor="#000000"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
