--- a/app/src/main/res/layout/activity_show_menu.xml
+++ b/app/src/main/res/layout/activity_show_menu.xml
@@ -11,7 +11,16 @@
     android:paddingTop="25dp">
 
 
-
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/next"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_margin="25dp"
+        android:text="Next"
+        android:textColor="#ffffff"
+        app:cornerRadius="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
     <ScrollView
@@ -38,7 +47,7 @@
                 android:layout_height="match_parent"
                 android:layout_margin="10dp"
 
-                android:background="@color/black"
+                android:background="#000000"
                 android:padding="2dp"
 
                 >
@@ -50,7 +59,7 @@
                     android:layout_height="60dp"
                     android:layout_margin="2dp"
 
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
                     android:gravity="center"
                     android:text="MENU"
                     android:textSize="25sp"
@@ -66,7 +75,7 @@
                     android:layout_width="160dp"
                     android:layout_height="60dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
 
                     android:gravity="center"
                     android:text="Monday"
@@ -82,7 +91,7 @@
                     android:layout_width="160dp"
                     android:layout_height="60dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
 
                     android:gravity="center"
                     android:text="Tuesday"
@@ -98,7 +107,7 @@
                     android:layout_width="160dp"
                     android:layout_height="60dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
 
                     android:gravity="center"
                     android:text="Wednesday"
@@ -114,7 +123,7 @@
                     android:layout_width="160dp"
                     android:layout_height="60dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
 
                     android:gravity="center"
                     android:text="Thursday"
@@ -130,7 +139,7 @@
                     android:layout_width="160dp"
                     android:layout_height="60dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
                     android:gravity="center"
 
                     android:text="Friday"
@@ -146,7 +155,7 @@
                     android:layout_width="160dp"
                     android:layout_height="60dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
                     android:gravity="center"
                     android:text="Saturday"
                     android:textSize="20sp"
@@ -162,7 +171,7 @@
 
                     android:layout_height="60dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
                     android:gravity="center"
                     android:text="Sunday"
                     android:textSize="20sp"
@@ -178,7 +187,7 @@
                     android:layout_width="120dp"
                     android:layout_height="200dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
                     android:gravity="center"
                     android:text="Breakfast"
                     android:textSize="20sp"
@@ -191,7 +200,7 @@
                     android:layout_width="160dp"
                     android:layout_height="200dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/breakfast"
@@ -204,7 +213,7 @@
                     android:layout_width="160dp"
                     android:layout_height="200dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/mobe"
@@ -217,7 +226,7 @@
                     android:layout_width="160dp"
                     android:layout_height="200dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/tube"
@@ -230,7 +239,7 @@
                     android:layout_width="160dp"
                     android:layout_height="200dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/webe"
@@ -243,7 +252,7 @@
                     android:layout_width="160dp"
                     android:layout_height="200dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/thbe"
@@ -256,7 +265,7 @@
                     android:layout_width="160dp"
                     android:layout_height="200dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/frbe"
@@ -269,7 +278,7 @@
                     android:layout_width="160dp"
                     android:layout_height="200dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
 
@@ -283,7 +292,7 @@
                     android:layout_width="120dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
                     android:gravity="center"
                     android:text="Lunch"
                     android:textSize="20sp"
@@ -296,9 +305,8 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
-
                     app:layout_constraintStart_toEndOf="@id/breakfast"
                     app:layout_constraintTop_toBottomOf="@id/mobe"
 
@@ -309,7 +317,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/molu"
@@ -322,7 +330,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/tulu"
@@ -335,7 +343,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/welu"
@@ -348,7 +356,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/thlu"
@@ -361,7 +369,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/frlu"
@@ -374,7 +382,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
 
@@ -389,7 +397,7 @@
                     android:layout_width="120dp"
                     android:layout_height="110dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
                     android:gravity="center"
                     android:text="Snacks"
                     android:textSize="20sp"
@@ -402,7 +410,7 @@
                     android:layout_width="160dp"
                     android:layout_height="110dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/breakfast"
@@ -415,7 +423,7 @@
                     android:layout_width="160dp"
                     android:layout_height="110dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/mosn"
@@ -428,7 +436,7 @@
                     android:layout_width="160dp"
                     android:layout_height="110dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/tusn"
@@ -441,7 +449,7 @@
                     android:layout_width="160dp"
                     android:layout_height="110dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/wesn"
@@ -454,7 +462,7 @@
                     android:layout_width="160dp"
                     android:layout_height="110dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/thsn"
@@ -467,7 +475,7 @@
                     android:layout_width="160dp"
                     android:layout_height="110dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/frsn"
@@ -480,7 +488,7 @@
                     android:layout_width="160dp"
                     android:layout_height="110dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
 
@@ -495,7 +503,7 @@
                     android:layout_width="120dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
                     android:gravity="center"
                     android:text="Dinner"
                     android:textSize="20sp"
@@ -508,7 +516,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/breakfast"
@@ -521,7 +529,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/modi"
@@ -534,7 +542,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/tudi"
@@ -547,7 +555,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/wedi"
@@ -560,7 +568,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/thdi"
@@ -573,7 +581,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
                     app:layout_constraintStart_toEndOf="@id/frdi"
@@ -586,7 +594,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_margin="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
 
 
@@ -600,7 +608,7 @@
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_margin="2dp"
-                    android:background="@color/menu"
+                    android:background="#eff3ff"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/dinner" />
@@ -611,10 +619,10 @@
                     android:layout_height="100dp"
                     android:layout_margin="2dp"
                     android:layout_marginStart="2dp"
-                    android:background="@color/white"
+                    android:background="#ffffff"
                     android:gravity="center"
                     android:text="**Salad to be present 7 days during lunch and dinner, Achaar/Lemon can be taken whenever needed by asking the mess workers."
-                    android:textColor="@color/black"
+                    android:textColor="#000000"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
