--- a/app/src/main/res/layout/fragment_create_poll.xml
+++ b/app/src/main/res/layout/fragment_create_poll.xml
@@ -3,28 +3,27 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-    android:layout_height="match_parent"
->
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="59dp"
-        app:titleTextColor="@color/white"
+        android:layout_alignParentTop="true"
         android:background="@color/food"
         android:paddingBottom="5dp"
         android:titleTextColor="@color/white"
-        android:layout_alignParentTop="true"
-        app:titleEnabled="true" />
+        app:titleEnabled="true"
+        app:titleTextColor="@color/white" />
 
     <ScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/toolbar"
         android:layout_marginVertical="25dp"
         android:scrollbars="none"
-        android:layout_below="@id/toolbar"
         android:windowSoftInputMode="adjustResize"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar">
@@ -62,6 +61,7 @@ android:layout_width="match_parent"
                 android:paddingStart="15dp"
                 android:text="Options"
                 android:textSize="20sp"
+                android:textColor="@color/black"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvQuestion" />
@@ -104,8 +104,7 @@ android:layout_width="match_parent"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/adder"
-                />
+                app:layout_constraintTop_toBottomOf="@id/adder" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
@@ -115,8 +114,8 @@ android:layout_width="match_parent"
         android:id="@+id/cardView3"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_margin="25dp"
         android:layout_marginBottom="621dp"
         android:background="@drawable/ripple"
