--- a/app/src/main/res/layout/particulars_element_layout.xml
+++ b/app/src/main/res/layout/particulars_element_layout.xml
@@ -46,7 +46,7 @@
             android:layout_marginVertical="10dp"
             android:paddingStart="13dp"
             android:text="@string/demolunch"
-            android:textColor="#201F1F"
+            android:textColor="@color/black"
             android:textSize="15dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
