--- a/app/src/main/res/layout/poll_element_layout.xml
+++ b/app/src/main/res/layout/poll_element_layout.xml
@@ -62,6 +62,7 @@
             android:layout_marginStart="5dp"
             android:gravity="center_vertical"
             android:text="Ayush Yadav"
+            android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@id/dIcon"
             app:layout_constraintTop_toBottomOf="@id/tvQuestion" />
 
@@ -95,6 +96,7 @@
             android:layout_marginTop="12dp"
             android:paddingHorizontal="10dp"
             android:text="5:58 pm"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
 
             app:layout_constraintTop_toBottomOf="@id/radioGroup" />
@@ -105,6 +107,7 @@
             android:layout_height="30dp"
             android:layout_marginTop="12dp"
             android:paddingHorizontal="10dp"
+            android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@id/view3"
 
             app:layout_constraintTop_toBottomOf="@id/radioGroup" />
