--- a/app/src/main/res/layout/review_element.xml
+++ b/app/src/main/res/layout/review_element.xml
@@ -65,6 +65,7 @@
             android:layout_marginBottom="10dp"
             android:paddingHorizontal="13dp"
             android:textSize="15dp"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/view3"
             app:layout_constraintTop_toBottomOf="@+id/type" />
