--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,12 +5,12 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="menu">#eff3ff</color>
-    <color name="mode">#FFFFFF</color>
+    <color name="black">#FFFFFF</color>
+    <color name="white">#000000</color>
+    <color name="menu">#20242d</color>
+    <color name="mode">#505052</color>
     <color name="food">#1972f0</color>
     <color name="medium">#82B5FE</color>
     <color name="grey">#cfd8df</color>
-    <color name="bg">#FFFFFF</color>
+    <color name="bg">#2E2D2D</color>
 </resources>
