--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.Messease" parent="ThemeOverlay.MaterialComponents.Dark">
+    <style name="Theme.Messease" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/food</item>
@@ -13,4 +13,7 @@
         <item name="android:statusBarColor">@color/food</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="Theme.Messease.AppBarOverlay" parent="Theme.MaterialComponents.DayNight.NoActionBar" />
+
+    <style name="Theme.Messease.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
