--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.MyApplication" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#1972f0</item>
+        <item name="colorPrimary">@color/food</item>
         <item name="android:statusBarColor">@color/food</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
