--- a/app/src/main/res/layout/dateitem.xml
+++ b/app/src/main/res/layout/dateitem.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="3dp"
     android:gravity="center"
+    android:background="@color/bg"
     app:cardCornerRadius="15dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,7 +22,6 @@
             android:gravity="center"
             android:text="Day"
             android:textColor="@color/food"
-
             android:textSize="10sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
