--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -12,7 +12,7 @@
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white">
+        android:background="@color/bg">
 
 
         <ImageView
@@ -38,19 +38,6 @@
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-
-        <!--    <TextView-->
-        <!--        android:layout_marginTop="40dp"-->
-        <!--        android:id="@+id/tvHeading"-->
-        <!--        android:layout_width="wrap_content"-->
-        <!--        android:layout_height="wrap_content"-->
-        <!--        android:text="Login to  your account"-->
-        <!--        android:textSize="25sp"-->
-        <!--        android:textStyle="bold"-->
-        <!--        app:layout_constraintEnd_toEndOf="parent"-->
-        <!--        app:layout_constraintStart_toStartOf="parent"-->
-        <!--        app:layout_constraintTop_toTopOf="parent" />-->
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -177,7 +164,7 @@
             android:layout_marginHorizontal="40dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="25dp"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/bg"
             android:text="Google Sign In"
             android:textColor="#B1B1B1"
             app:cornerRadius="5dp"
@@ -187,15 +174,6 @@
             app:layout_constraintTop_toBottomOf="@+id/or"
             app:strokeColor="#B1B1B1"
             app:strokeWidth="2dp" />
-
-        <!--    <com.google.android.gms.common.SignInButton-->
-        <!--        android:id="@+id/gsi"-->
-        <!--        android:layout_width="match_parent"-->
-        <!--        android:layout_height="45dp"-->
-        <!--        android:layout_marginTop="25dp"-->
-        <!--        android:layout_marginHorizontal="35dp"-->
-        <!--        app:layout_constraintTop_toBottomOf="@+id/btnLogin"-->
-        <!--        tools:layout_editor_absoluteX="25dp" />-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
