--- a/app/src/main/res/layout/fragment_mc_main_page.xml
+++ b/app/src/main/res/layout/fragment_mc_main_page.xml
@@ -4,7 +4,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/bg"
   >
 
     <ScrollView
@@ -24,7 +24,7 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView"
-                app:cardBackgroundColor="@color/white"
+                app:cardBackgroundColor="@color/bg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:elevation="12dp"
@@ -124,7 +124,7 @@
                             android:layout_marginRight="5dp"
                             android:layout_marginBottom="10dp"
                             android:layout_weight="1"
-                            app:cardBackgroundColor="@color/menu"
+                            app:cardBackgroundColor="@color/bg"
                             android:background="@drawable/ripple"
                             app:cardCornerRadius="10dp"
                             app:cardElevation="5dp"
@@ -164,7 +164,7 @@
                             android:layout_marginVertical="6dp"
                             android:layout_marginStart="5dp"
                             android:layout_marginEnd="5dp"
-                            app:cardBackgroundColor="@color/menu"
+                            app:cardBackgroundColor="@color/bg"
                             android:layout_marginBottom="10dp"
                             android:layout_weight="1"
                             android:background="@drawable/ripple"
@@ -209,7 +209,7 @@
                             android:background="@drawable/ripple"
                             app:cardCornerRadius="10dp"
                             app:cardElevation="5dp"
-                            app:cardBackgroundColor="@color/menu"
+                            app:cardBackgroundColor="@color/bg"
                             app:strokeColor="@color/grey"
                             app:strokeWidth="2dp">
 
@@ -246,7 +246,7 @@
                             android:layout_marginRight="2dp"
                             android:layout_marginBottom="10dp"
                             android:layout_weight="1"
-                            app:cardBackgroundColor="@color/menu"
+                            app:cardBackgroundColor="@color/bg"
                             android:background="@drawable/ripple"
                             app:cardCornerRadius="10dp"
                             app:cardElevation="5dp"
@@ -302,7 +302,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
                     android:orientation="vertical"
-                    android:background="@color/white"
+                    android:background="@color/bg"
                     android:paddingStart="10dp">
 
                     <TextView
