--- a/app/src/main/res/layout/list_element.xml
+++ b/app/src/main/res/layout/list_element.xml
@@ -52,7 +52,7 @@
             android:layout_marginVertical="10dp"
             android:paddingStart="13dp"
             android:text=""
-            android:textColor="#000000"
+            android:textColor="@color/black"
             android:textSize="15dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
