--- a/app/src/main/res/layout/poll_detail_layout.xml
+++ b/app/src/main/res/layout/poll_detail_layout.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@color/bg"
 
     android:layout_marginBottom="10dp">
 
