Reverted styling of btn_pay and did changes for lottie animation as directed

--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -61,10 +61,10 @@
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/iv"
         android:layout_width="match_parent"
-        android:layout_height="230dp"
+        android:layout_height="0dp"
         android:paddingHorizontal="25dp"
         android:layout_marginTop="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btnPay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
@@ -78,10 +78,8 @@
         android:layout_height="59dp"
         android:layout_marginHorizontal="25dp"
         android:layout_marginBottom="35dp"
-        android:backgroundTint="@color/food"
         android:enabled="false"
         android:text="Pay"
-        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
